ver 0.20.21 (not yet released)
* database
  - proxy: add "password" setting
  - proxy: support tags "ArtistSort", "AlbumArtistSort", "AlbumSort"

ver 0.20.20 (2018/05/22)
* protocol
  - fix "modified-since" filter regression
* output
  - pulse: cork stream when paused due to "single" mode
* decoder
  - dsdiff, dsf: support more MIME types
  - dsdiff, dsf: allow 4 MB ID3 tags
  - opus: support R128_ALBUM_GAIN tag
* Android, Windows
  - enable the "proxy" database plugin

ver 0.20.19 (2018/04/26)
* protocol
  - validate absolute seek time, reject negative values
* database
  - proxy: fix "search already in progress" errors
  - proxy: implement "list ... group"
* input
  - mms: fix lockup bug and a crash bug
* decoder
  - ffmpeg: fix av_register_all() deprecation warning (FFmpeg 4.0)
* player
  - fix spurious "Not seekable" error when switching radio streams
* macOS: fix crash bug

ver 0.20.18 (2018/02/24)
* input
  - curl: allow authentication methods other than "Basic"
* decoder
  - flac: improve seeking precision
* fix gapless CUE song transitions
* Android, Windows
  - enable the NFS storage plugin

ver 0.20.17 (2018/02/11)
* output
  - alsa: fix crash bug with 8 channels
* mixer
  - alsa: fix rounding error at volume 0
* fix real-time and idle scheduling with Musl
* Android
  - fix compatibility with Android 4.0

ver 0.20.16 (2018/02/03)
* output
  - pulse: fix crash during auto-detection
* database
  - simple: fix search within mount points
  - upnp: enable IPv6
* archive
  - iso9660: libcdio 2.0 compatibility
* fix crash in debug build on Haiku and other operating systems

ver 0.20.15 (2018/01/05)
* queue: fix crash after seek failure
* resampler
  - soxr: clear internal state after manual song change
* state file
  - make mount point restore errors non-fatal
  - fix crash when restoring mounts with incompatible database plugin
* Android
  - build without Ant
  - fix for SIGSYS crash

ver 0.20.14 (2018/01/01)
* database