@@ -2,6 +2,8 @@ ver 0.20.21 (not yet released)
 * database
   - proxy: add "password" setting
   - proxy: support tags "ArtistSort", "AlbumArtistSort", "AlbumSort"
+* output
+  - httpd: remove broken DLNA support code
 
 ver 0.20.20 (2018/05/22)
 * protocol
